test/errors/importee-missing-comment/hook.jsx
import { useEffect } from "react";

export default function useTestHook() {
  useEffect(() => {});
}
